# lager

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  RELEASE_PROCESS.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
box/: LICENSE  README.md  start_box.sh  verify_restart_policy.sh
box/lager/: README.md  __init__.py  actuate.py  ble.py  box_http_server.py  cache.py  constants.py  core.py  dashboard_db.py  exceptions.py  hardware_service.py  log.py  rotation.py  run.sh  util.py
box/oscilloscope-daemon/: .gitignore  Cargo.toml  LICENSE  build_daemon.sh  requirements.txt  test_client.py  web_oscilloscope.html
box/oscilloscope-daemon/cli/: Cargo.toml
box/oscilloscope-daemon/cli/src/: main.rs
box/oscilloscope-daemon/daemon/: Cargo.toml  build.rs  wrapper.h
box/oscilloscope-daemon/daemon/src/: lib.rs  main.rs
box/oscilloscope-daemon/daemon/src/oscilloscope/: mod.rs
box/oscilloscope-daemon/daemon/src/oscilloscope/pico/: mod.rs  ps2000.rs
box/oscilloscope-daemon/daemon/src/websocket/: connection.rs  handlers.rs  mod.rs
box/oscilloscope-daemon/daemon/src/webtransport/: connection.rs  handlers.rs  mod.rs  server.rs  streaming.rs
box/oscilloscope-daemon/protocol/: Cargo.toml
box/oscilloscope-daemon/protocol/src/: lib.rs
box/oscilloscope-daemon/tests/clients/: web_oscilloscope_wt.html
box/oscilloscope-daemon/tests/test_commands/: manual_commands.txt
box/oscilloscope-daemon/wtransport_test/: Cargo.toml  test_client.html
box/oscilloscope-daemon/wtransport_test/src/: main.rs
box/udev_rules/: 99-instrument.rules  README.md
cli/: README.md  __init__.py  __main__.py  box_storage.py  config.py  exceptions.py  main.py  safe_unpickle.py  setup.py  simple_hdlc.py  sort_utils.py  status.py  update_check.py
cli/battery/: __init__.py  battery_tui.py  websocket_client.py
cli/commands/: __init__.py
cli/context/: __init__.py  ci_detection.py  constants.py  error_handlers.py  session.py
cli/core/: __init__.py  matchers.py  net_helpers.py  net_storage.py  param_types.py  ssh_utils.py  utils.py
cli/deployment/: __init__.py
cli/impl/: net.py  (+1 more)
docs/: README.md  docs.json  package.json  styles.css  vercel.json
factory/: README.md  deploy_factory.sh  docker-compose.yml
test/: CONVENTIONS.md  COVERAGE.md  README.md
(+660 files in other folders)
