[package]
name = "cli"
version = "0.1.0"
edition = "2024"
authors = ["Lager Data"]
description = "Command-line interface for oscilloscope and networking control"
license = "Apache-2.0"

[dependencies]
# CLI argument parsing
clap = { version = "4.0", features = ["derive"] }
protocol = { path = "../protocol" }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Error handling
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"