[package]
name = "daemon"
version = "0.1.0"
edition = "2024"
authors = ["Lager Data"]
description = "Background daemon for oscilloscope control and data streaming"
license = "Apache-2.0"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
once_cell = "1.18"
protocol = {path = "../protocol"}
serde_json = "1.0"

# WebSocket support
tokio-tungstenite = "0.20"
futures-util = "0.3"
tungstenite = "0.20"
futures = "0.3"
url = "2.4"
async-trait = "0.1"
tokio-util = "0.7"

# WebTransport support
wtransport = "0.6"
rustls-pemfile = "1.0"

# Lock-free queues
crossbeam = "0.8"

[build-dependencies]
bindgen = "0.69"
cc = "1.0"


[features]
default = ["ps2000"]
ps2000 = []
ps2000a = []
generic = []
mso5000 = []