[package]
name = "protocol"
version = "0.1.0"
edition = "2024"
authors = ["Lager Data"]
description = "Shared protocol definitions for oscilloscope control"
license = "Apache-2.0"

[dependencies]
# JSON serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"

# CLI
clap = { version = "4.0", features = ["derive"] }

# Optional: UUID generation for request/response correlation
uuid = { version = "1.0", features = ["v4", "serde"] }
